# blackhole-timer

./: .gitignore  .vercelignore  README.md  README.zh-CN.md  WINDOWS_DESKTOP.md  index.html  package.json
.github/workflows/: windows-native-d3d.yml
desktop/: desktop-renderer.js  desktop.css  desktop.html
electron/: main.cjs  preload.cjs
extension/: README.md  background.js  blackhole-port.frag  content.js  manifest.json
scripts/: deploy-windows-native.ps1
src/: main.js  styles.css
windows-native-d3d/: CMakeLists.txt  README.md
windows-native-d3d/src/: BlackHoleOverlay.hlsl  main.cpp
windows-webview2/: BlackHoleRest.WebView2.csproj  OverlayForm.cs  Program.cs
